# aorus-rag

./: README.md  pyproject.toml
data/: chunks.json
docs/: benchmark_report.md  benchmark_report_llamacpp.md
llamacpp/: README_llamacpp.md
results/Llama-3.2-3B_benchmark/: benchmark_results_Llama-3.2-3B-Instruct-Q4_K_M_embmini.json  benchmark_results_Llama-3.2-3B-Instruct-Q5_K_M_embmini.json
results/Qwen2.5-3B_benchmark/: benchmark_results_Qwen2.5-3B-Instruct-Q4_K_M_embmini.json  benchmark_results_Qwen2.5-3B-Instruct-Q5_K_M_embmini.json
results/llama-cpp-cpu/Phi-4-mini_benchmark/: benchmark_results_Phi-4-mini-instruct-Q4_K_M_embmini.json  benchmark_results_Phi-4-mini-instruct-Q5_K_M_embmini.json
results/vllm-gpu/1B_3models/: benchmark_AMead10_Llama-3.2-1B-Instruct-AWQ.json  benchmark_Qwen_Qwen2.5-1.5B-Instruct-AWQ.json  benchmark_casperhansen_llama-3.2-1b-instruct-awq.json  benchmark_comparison.json
results/vllm-gpu/3B_3models/: benchmark_AMead10_Llama-3.2-3B-Instruct-AWQ (1).json  benchmark_Qwen_Qwen2.5-3B-Instruct-AWQ (1).json  benchmark_casperhansen_llama-3.2-3b-instruct-awq (1).json  benchmark_comparison (1).json
scripts/: download_model.py
src/: benchmark.py  chat.py  chunk_create.py  retrieval_generate.py  vector_index.py
src/llamacpp/: benchmark_llamacpp.py  chat_llamacpp.py
src/vllm/: benchmark_vllm.py  retrieval_generate_vllm.py
